--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.3",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-svelte": "^3.3.2",
     "tailwindcss": "^3.4.16"
   }
 }
