--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.3.2",
     "tailwindcss": "^3.4.16"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15"
   }
 }
