--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.3",
     "daisyui": "^4.12.14",
+    "marked": "^15.0.3",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.3.2",
