--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.3.2",
+    "rehype-external-links": "^3.0.0",
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
