--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/svelte": "^7.0.1",
     "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.3",
     "daisyui": "^4.12.14",
@@ -17,7 +18,9 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.3.2",
     "rehype-external-links": "^3.0.0",
-    "tailwindcss": "^3.4.16"
+    "svelte": "^5.9.0",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15"
