--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@astrojs/svelte": "^7.0.1",
     "@astrojs/tailwind": "^5.1.3",
+    "@typescript-eslint/parser": "^8.18.0",
     "astro": "^5.0.3",
     "daisyui": "^4.12.14",
+    "eslint": "^9.16.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "marked": "^15.0.3",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
