--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/rss": "^4.0.10",
     "@astrojs/svelte": "^7.0.1",
     "@astrojs/tailwind": "^5.1.3",
     "@typescript-eslint/parser": "^8.18.0",
