--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.3.2",
     "rehype-external-links": "^3.0.0",
+    "sanitize-html": "^2.13.1",
     "svelte": "^5.9.0",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2"
